--- a/CurlWatch Nettside/NettsideCurling.html
+++ b/CurlWatch Nettside/NettsideCurling.html
@@ -114,8 +114,7 @@ body {font-family: "Lato", sans-serif}
       </center>
         <br><br>
         <script>
-
-
+        // Mye av koden til timeren er hentet fra: https://gist.github.com/remhay18/bcd8a6cf5b1b1ac2ebfa9ad279f13e78
         var time_in_minutes = 38; //tiden vi ønsker å telle ned fra
         var current_time = Date.parse(new Date());
         var deadline = new Date(current_time + time_in_minutes*60*1000);
